--- a/install/package.json
+++ b/install/package.json
@@ -171,6 +171,9 @@
         "lint-staged": "16.0.0",
         "mocha": "11.2.2",
         "mocha-lcov-reporter": "1.3.0",
+        "chai": "4.3.0",
+        "supertest": "6.3.0",
+        "cheerio": "1.0.0",
         "mockdate": "3.0.5",
         "nyc": "17.1.0",
         "smtp-server": "3.13.6"
