Show responder role on posts + OpenAPI schema updates

--- a/public/openapi/components/schemas/PostObject.yaml
+++ b/public/openapi/components/schemas/PostObject.yaml
@@ -372,6 +372,11 @@ PostDataObject:
         flagId:
           type: number
           description: The flag identifier, if this particular post has been flagged before
+        roleLabel:
+          type: string
+          description: Instructor/TA/Student label for the post author
+          enum: [Instructor, TA, Student]
+
     - type: object
       description: Optional properties that may or may not be present (except for `pid`, which is always present, and is only here as a hack to pass validation)
       properties:
