--- a/nodebb-plugin-composer-suggestions/package.json
+++ b/nodebb-plugin-composer-suggestions/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "main": "library.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "mocha": "^11.7.4",
+    "supertest": "^7.1.4"
+  }
 }
