--- a/nodebb-plugin-composer-suggestions/package.json
+++ b/nodebb-plugin-composer-suggestions/package.json
@@ -17,5 +17,8 @@
     "mocha": "^11.7.4",
     "sinon": "^21.0.0",
     "supertest": "^7.1.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
