--- a/.github/workflows/k6.yml
+++ b/.github/workflows/k6.yml
@@ -1,4 +1,5 @@
 name: k6 smoke
+
 on:
   workflow_dispatch:
   pull_request:
@@ -6,21 +7,31 @@ on:
     paths:
       - "k6/**"
       - ".github/workflows/k6.yml"
+
 jobs:
   k6-smoke:
     runs-on: ubuntu-latest
     env:
-      BASE_URL: ${{ secrets.K6_BASE_URL }}
+      # fallback makes it work even if the secret isn't set
+      BASE_URL: ${{ secrets.K6_BASE_URL || 'http://17313-team20.s3d.cmu.edu:4567' }}
     steps:
       - uses: actions/checkout@v4
-      - uses: grafana/setup-k6-action@v1
+
+      - name: Setup k6
+        uses: grafana/setup-k6-action@v1
         with:
-          version: 'latest'
+          k6-version: latest   # <-- fix: was 'version'
+
       - name: Run k6 (logs)
         run: k6 run k6/smoke.test.js
-      - name: Export summary (artifact)
-        run: k6 run --summary-export tool-output/k6-summary.json k6/smoke.test.js
-      - uses: actions/upload-artifact@v4
+
+      - name: Export summary to file
+        run: |
+          mkdir -p tool-output
+          k6 run --summary-export tool-output/k6-summary.json k6/smoke.test.js
+
+      - name: Upload k6 artifacts
+        uses: actions/upload-artifact@v4
         with:
           name: k6-results
           path: tool-output/**
