--- a/.github/workflows/k6.yml
+++ b/.github/workflows/k6.yml
@@ -1,5 +1,4 @@
 name: k6 smoke
-
 on:
   workflow_dispatch:
   pull_request:
@@ -12,7 +11,6 @@ jobs:
   k6-smoke:
     runs-on: ubuntu-latest
     env:
-      # fallback makes it work even if the secret isn't set
       BASE_URL: ${{ secrets.K6_BASE_URL || 'http://17313-team20.s3d.cmu.edu:4567' }}
     steps:
       - uses: actions/checkout@v4
@@ -20,7 +18,7 @@ jobs:
       - name: Setup k6
         uses: grafana/setup-k6-action@v1
         with:
-          k6-version: latest   # <-- fix: was 'version'
+          k6-version: 0.49.0
 
       - name: Run k6 (logs)
         run: k6 run k6/smoke.test.js
