--- a/docker-compose-redis.yml
+++ b/docker-compose-redis.yml
@@ -13,6 +13,22 @@ services:
       - nodebb-uploads:/usr/src/app/public/uploads
       - nodebb-config:/opt/config
       - ./install/docker/setup.json:/usr/src/app/setup.json
+  
+  translator:
+    build:
+      context: ../llm-experiment-microservice-bluey
+      dockerfile: Dockerfile
+    container_name: translator
+    restart: unless-stopped
+    ports:
+      - '5000:5000'
+    environment:
+      FLASK_ENV: "production"
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://127.0.0.1:5000/health')"]
+      interval: 15s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:8.0.1-alpine
