--- a/docker-compose-redis.yml
+++ b/docker-compose-redis.yml
@@ -13,22 +13,7 @@ services:
       - nodebb-uploads:/usr/src/app/public/uploads
       - nodebb-config:/opt/config
       - ./install/docker/setup.json:/usr/src/app/setup.json
-  
-  translator:
-    build:
-      context: ../llm-experiment-microservice-bluey
-      dockerfile: Dockerfile
-    container_name: translator
-    restart: unless-stopped
-    ports:
-      - '5000:5000'
-    environment:
-      FLASK_ENV: "production"
-    healthcheck:
-      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://127.0.0.1:5000/health')"]
-      interval: 15s
-      timeout: 5s
-      retries: 5
+    networks: [llmnet]
 
   redis:
     image: redis:8.0.1-alpine
@@ -37,6 +22,7 @@ services:
     # command: ["redis-server", "--save", "60", "1", "--loglevel", "warning"] # uncomment if you want to use snapshotting instead of AOF
     volumes:
       - redis-data:/data
+    networks: [llmnet]
 
 volumes:
   redis-data:
@@ -66,3 +52,7 @@ volumes:
       o: bind
       type: none
       device: ./.docker/config
+
+networks:
+  llmnet:
+    external: true
